--- a/public/style.css
+++ b/public/style.css
@@ -79,3 +79,41 @@ body {
 .custom-dialog{
   
 }
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  width: 278px;
+  font-size: 14px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+
+}
+.btn-primary {
+  color: #fff;
+  background-color: #60b2d0;
+  border-color: #2e6da4
+}
+
+.btn-default {
+  color: #60b2d0;
+  background-color: #fff;
+  border-color: #ccc
+}
+.ReportDiv{
+  align: center;
+  text-align: center;
+}
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
